--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-*.cpcache
-*.nrepl-port
-*.clj-kondo
-*.lsp
-*.calva
+.cpcache
+.nrepl-port
+.clj-kondo/*
+!.clj-kondo/config.edn
+.lsp/*
+!.lsp/config.edn
+.calva
